{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 21,
  "lineage": "1933f1ac-529f-1a29-8414-6e588aff2303",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e41532e88e1f9b3",
            "arn": "arn:aws:ec2:us-east-1:325322500999:instance/i-0be83651fcb5f98c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-0be83651fcb5f98c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_vpc",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07fc09142ddd14d92",
            "private_dns": "ip-10-0-0-183.ec2.internal",
            "private_ip": "10.0.0.183",
            "public_dns": "ec2-3-81-51-86.compute-1.amazonaws.com",
            "public_ip": "3.81.51.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:325322500999:key/ddb5265a-3876-49a8-838f-b2bb2d77de7f",
                "throughput": 0,
                "volume_id": "vol-09d3774d73eff44ed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf4c17f16efabb2b",
            "tags": {
              "Name": "Web-Nginx",
              "company": "Spark",
              "project_code": "DEV12345",
              "project_name": "web-app"
            },
            "tags_all": {
              "Name": "Web-Nginx",
              "company": "Spark",
              "project_code": "DEV12345",
              "project_name": "web-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06bdbc3477b0a9869"
            ]
          },
          "dependencies": [
            "aws_ami_copy.ubuntu_encrypted_ami",
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_e2cinstance",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_ami.encrypted-ami",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325322500999:internet-gateway/igw-092d36701c1ca3bcb",
            "id": "igw-092d36701c1ca3bcb",
            "owner_id": "325322500999",
            "tags": {
              "Name": "igw",
              "company": "Spark",
              "project_code": "DEV12345",
              "project_name": "web-app"
            },
            "tags_all": {
              "Name": "igw",
              "company": "Spark",
              "project_code": "DEV12345",
              "project_name": "web-app"
            },
            "vpc_id": "vpc-016962789b13642ed"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325322500999:route-table/rtb-097b01dc7338e27ce",
            "id": "rtb-097b01dc7338e27ce",
            "owner_id": "325322500999",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092d36701c1ca3bcb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nginx-rt",
              "company": "Spark",
              "project_code": "DEV12345",
              "project_name": "web-app"
            },
            "tags_all": {
              "Name": "nginx-rt",
              "company": "Spark",
              "project_code": "DEV12345",
              "project_name": "web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-016962789b13642ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077cefa63d281a68e",
            "route_table_id": "rtb-097b01dc7338e27ce",
            "subnet_id": "subnet-0bf4c17f16efabb2b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325322500999:security-group/sg-06bdbc3477b0a9869",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bdbc3477b0a9869",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "325322500999",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-sg",
              "company": "Spark",
              "project_code": "DEV12345",
              "project_name": "web-app"
            },
            "tags_all": {
              "Name": "Web-sg",
              "company": "Spark",
              "project_code": "DEV12345",
              "project_name": "web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-016962789b13642ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325322500999:subnet/subnet-0bf4c17f16efabb2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf4c17f16efabb2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325322500999",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web-subnet1",
              "company": "Spark",
              "project_code": "DEV12345",
              "project_name": "web-app"
            },
            "tags_all": {
              "Name": "Web-subnet1",
              "company": "Spark",
              "project_code": "DEV12345",
              "project_name": "web-app"
            },
            "vpc_id": "vpc-016962789b13642ed"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325322500999:vpc/vpc-016962789b13642ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ff82571943e6eb90",
            "default_route_table_id": "rtb-0aabacb13c63f1ebb",
            "default_security_group_id": "sg-0feebd6ca5a26186c",
            "dhcp_options_id": "dopt-72ddde08",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-016962789b13642ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aabacb13c63f1ebb",
            "owner_id": "325322500999",
            "tags": {
              "Name": "Web-Nginx",
              "company": "Spark",
              "project_code": "DEV12345",
              "project_name": "web-app"
            },
            "tags_all": {
              "Name": "Web-Nginx",
              "company": "Spark",
              "project_code": "DEV12345",
              "project_name": "web-app"
            }
          }
        }
      ]
    }
  ]
}